enable select game

--- a/index.html
+++ b/index.html
@@ -3,11 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Lucky Numbers</title>
 </head>
 <body>
     <header class = "desc">
         <h1 class = 'h1'>Your Lucky Numbers </h1>
     </header>
+    <section class = 'hero'>
+        <div id = 'display-info'>
+          
+
+        </div>
+        <button id ='powerball'>Powerball</button>
+        <button id = 'megaMillions'> Mega Millions</button>
+        <button id = 'floridaLotto'> Florida Lotto</button>
+        <button id = 'fantasy5'> Fantasy 5</button>
+    </section>
+
+    <script src = "./assets/js/script.js"></script>
 </body>
 </html>
