refactor the algorithm to play game

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Lucky Numbers</title>
 </head>
@@ -11,10 +12,14 @@
         <h1 class = 'h1'>Your Lucky Numbers </h1>
     </header>
     <section class = 'hero'>
-        <div id = 'display-info'>
-          
+        <div>
+            <h2>Welcome to lucky game</h2>
+            <p>To get your lucky numbers, click on the game that you would like to play</p>
+            <div id = 'display-info'> 
 
+            </div>
         </div>
+       
         <button id ='powerball'>Powerball</button>
         <button id = 'megaMillions'> Mega Millions</button>
         <button id = 'floridaLotto'> Florida Lotto</button>
@@ -24,3 +29,4 @@
     <script src = "./assets/js/script.js"></script>
 </body>
 </html>
+
